--- a/DIWEB/CSS/02.01 Actividad 2/estilos/estilos.css
+++ b/DIWEB/CSS/02.01 Actividad 2/estilos/estilos.css
@@ -23,3 +23,17 @@ li:nth-child(3)
 {
     color: lawngreen;
 }
+li:nth-child(3)
+{
+    color: lawngreen;
+}
+li:nth-child(odd):hover::before
+{
+    content: "Somos elementos impares ";
+}
+li:nth-child(even):hover::after
+{
+    content: " Somos elementos pares ";
+    
+    
+}
