--- a/DIWEB/CSS/estilos2/estilos/estilos.css
+++ b/DIWEB/CSS/estilos2/estilos/estilos.css
@@ -29,15 +29,14 @@ form input[type=submit]
     background-size: 50px;
     background-repeat: no-repeat;
     margin-left: 20px;
-    /*position:relative;
-    left:0px;
-    top:1px;
-    z-index:100;
-    */
+   
     
 }
 a
 {
     text-decoration: none;
     color: black;
+}
+#nombre:focus {
+    background-color: green;
 }
