--- a/DIWEB/CSS/02.02.Actividad 1/style.css
+++ b/DIWEB/CSS/02.02.Actividad 1/style.css
@@ -110,4 +110,5 @@ h6 {
     left: 93%;
     background-image: url(cthulhu_approval.gif);
     /*por el float también se puede saber*/
+    background-repeat: no-repeat;
 }
