--- a/DIWEB/CSS/02.02.Actividad 2/css/css.css
+++ b/DIWEB/CSS/02.02.Actividad 2/css/css.css
@@ -5,51 +5,66 @@ body
 header
 {
     background-color: red;
+    min-height: 50px;
+    margin-bottom: 20px;
 }
 nav
 {
     background-color: blue;
+    color: white;
+    min-height: 50px;
+    margin-bottom: 20px;
+    
 }
 section
 {
     display: grid;
-    grid-template-columns: auto 600px;
+    grid-template-columns: 60% 40% ;
     background-color: #fcfcfc;
     grid-row-gap: 5px;
     grid-column-gap: 10px;
-    height: 300px;
-    border: 1px solid;
+    height: 200px;
+   border: 2px solid #00ceff;
     width:100%;
     grid-column-gap: 0px;
+    
 }
-article
+/*los 2 article*/
+section>article
 {
-    
-  
-     
-    float: left;
+     border: 2px solid #00ceff;
+ 
     background-color: royalblue;
-    grid-column: 1/1;
-    grid-row: 2/4;
+   
+      min-height: 40px; 
     
+    height: 30%;
+     width: 90%;
+     grid-area: 1 / 1 / 2 / 2; 
+    margin-left: 20px;
+    margin-top: 40px;
 }
+/*el segundo article*/
 article+article
 {
-    grid-column: 1/1;
-    grid-row: 1/3;
-    margin-top: 5px;
-    margin-bottom: 20%;
+    margin-top: -60px;
+    background-color: red;
+    height: 30%;
+     grid-area: 2 / 1 / 3 / 2;
 }
+
 aside
 {
-   grid-row: 1/4;
-    
-    margin-left: 20px;
-    
-    height: 100%; 
+    border: 2px solid #00ceff;
+    height: 80%; 
+    width: 100%;
     background-color: green;
+     grid-area: 1 / 2 / 3 / 3;
 }
 footer
 {
-    background-color: yellow;
+    margin-top: 10px;
+    background-color: gray;
+    min-height: 50px;
+    border: 2px solid #00ceff;
 }
