--- a/DIWEB/CSS/02.02.Actividad 2/css/css.css
+++ b/DIWEB/CSS/02.02.Actividad 2/css/css.css
@@ -1,19 +1,26 @@
-body
+@media screen
 {
+*
+{
+ text-align: center;
+
     
 }
 header
 {
-    background-color: red;
+    background-color: gray;
     min-height: 50px;
     margin-bottom: 20px;
+    border: 2px solid #00ceff;
 }
 nav
 {
-    background-color: blue;
-    color: white;
+    
+    
     min-height: 50px;
     margin-bottom: 20px;
+    background-color: gray;
+    border: 2px solid #00ceff;
     
 }
 section
@@ -43,12 +50,13 @@ section>article
      grid-area: 1 / 1 / 2 / 2; 
     margin-left: 20px;
     margin-top: 40px;
+    background-color: gray;
 }
 /*el segundo article*/
 article+article
 {
     margin-top: -60px;
-    background-color: red;
+    
     height: 30%;
      grid-area: 2 / 1 / 3 / 2;
 }
@@ -57,9 +65,11 @@ aside
 {
     border: 2px solid #00ceff;
     height: 80%; 
-    width: 100%;
-    background-color: green;
+    width: 90%;
+    background-color: gray;
      grid-area: 1 / 2 / 3 / 3;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 footer
 {
@@ -67,4 +77,94 @@ footer
     background-color: gray;
     min-height: 50px;
     border: 2px solid #00ceff;
+}
+}
+
+
+/*para imprimir
+
+-------------------------------------------------------------------------------------------------------------------------------------*/
+@media print
+{
+*
+{
+ text-align: center;
+
+    
+}
+header
+{
+    background-color: gray;
+    min-height: 50px;
+    margin-bottom: 20px;
+    border: 2px solid #00ceff;
+    display: none;
+}
+nav
+{
+    
+    display: none;
+    min-height: 50px;
+    margin-bottom: 20px;
+    background-color: gray;
+    border: 2px solid #00ceff;
+    
+}
+section
+{
+    display: grid;
+    grid-template-columns: 100% ;
+    background-color: #fcfcfc;
+    grid-row-gap: 5px;
+    grid-column-gap: 10px;
+    height: 200px;
+   border: 2px solid #00ceff;
+    width:100%;
+    grid-column-gap: 0px;
+    
+}
+/*los 2 article*/
+section>article
+{
+     border: 2px solid #00ceff;
+ 
+    background-color: royalblue;
+   
+      min-height: 40px; 
+    
+    height: 100%;
+    
+    grid-column: 1/1;
+    
+    
+    background-color: gray;
+}
+/*el segundo article*/
+article+article
+{
+    
+    
+    height: 100%;
+    
+}
+
+aside
+{
+    border: 2px solid #00ceff;
+    height: 80%; 
+    width: 90%;
+    background-color: gray;
+     grid-area: 1 / 2 / 3 / 3;
+    margin-top: 20px;
+    margin-left: 20px;
+    display: none;
+}
+footer
+{
+    display: none;
+    margin-top: 10px;
+    background-color: gray;
+    min-height: 50px;
+    border: 2px solid #00ceff;
+}
 }
