--- a/DIWEB/CSS/02.02. Actividad de refuerzo 1/tarea07/css/style.css
+++ b/DIWEB/CSS/02.02. Actividad de refuerzo 1/tarea07/css/style.css
@@ -65,24 +65,54 @@ h6 {
 
 .item p {
     margin: 0 0 5px 0;
+    
 }
 .pagina
 {
-    display: grid;
+    
  
     
     
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 9px;
-    grid-row-gap: 13px;
+    
 }
-.div1 { grid-area: 1 / 2 / 4 / 3; }
-.div2 { grid-area: 1 / 3 / 4 / 4; }
-.div3 { grid-area: 1 / 4 / 4 / 5; }
-.div4 { grid-area: 4 / 2 / 7 / 3; }
-.div5 { grid-area: 4 / 3 / 7 / 4; }
-.div6 { grid-area: 4 / 4 / 7 / 5; }
-.div7 { grid-area: 1 / 1 / 3 / 2; }
-.div8 { grid-area: 3 / 1 / 5 / 2; }
-.div9 { grid-area: 5 / 1 / 7 / 2; }
+header>h1
+{
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+ul
+{
+    list-style: none;
+    
+}
+ul>li>a
+{
+    text-decoration: none;
+    font-size: 15px;
+    
+}
+
+ul>li
+{
+    border: 1px solid;
+    box-shadow: 10px 10px 15px gray;
+    margin-bottom: 5px;
+    
+}
+
+.pagina {
+display: grid;
+grid-template-columns: 30% 70%;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+header {
+    grid-column: 1/3; 
+}
+ul {  }
+main {  }
+
+footer {}
