--- a/DIWEB/CSS/02.02. Actividad de refuerzo 1/tarea07/css/style.css
+++ b/DIWEB/CSS/02.02. Actividad de refuerzo 1/tarea07/css/style.css
@@ -104,7 +104,7 @@ ul>li
 
 .pagina {
 display: grid;
-grid-template-columns: 30% 70%;
+grid-template-columns: auto auto;
 grid-column-gap: 0px;
 grid-row-gap: 0px;
 }
@@ -112,7 +112,25 @@ grid-row-gap: 0px;
 header {
     grid-column: 1/3; 
 }
-ul {  }
-main {  }
-
+ul { 
+     
+    margin-left: 70%;
+}
+ul>li
+{
+    width: 55%;
+    margin-bottom: 10px;
+    height: 75px;
+}
+main { 
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+   // grid-column-gap: 11px;
+    grid-row-gap: 20px;
+    width: 63%;
+}
+main>div
+{
+    box-shadow: 5px 0px 5px 3px #ffa700;
+}
 footer {}
