--- a/DIWEB/CSS/Transformaciones/ejercicio 3/ej1_base.css
+++ b/DIWEB/CSS/Transformaciones/ejercicio 3/ej1_base.css
@@ -16,6 +16,7 @@
 .caja1
 {
     transition: transform 1s;
+    background-color: red;
 }
 .caja1:hover
 {
@@ -24,6 +25,7 @@
 .caja2
 {
     transition: transform 1s;
+    background-color: #9752c3;
 }
 .caja2:hover
 {
@@ -32,6 +34,7 @@
 
 .caja3
 {
+    background-color: #4697f4;
     transition: transform 1s;
 }
 .caja3:hover
@@ -41,6 +44,7 @@
 
 .caja4
 {
+      background-color: #65adff;
     transition: transform 1s;
 }
 .caja4:hover
@@ -49,6 +53,7 @@
 }
 .caja5
 {
+    background-color: #44aeb7;
     transition: transform 1s;
 }
 .caja5:hover
@@ -57,6 +62,7 @@
 }
 .caja6
 {
+    background-color: #ffba00;
     transition: transform 1s;
 }
 .caja6:hover
@@ -65,6 +71,7 @@
 }
 .caja7
 {
+     background-color: #ff4e00;
     transition: transform 1s;
 }
 .caja7:hover
@@ -73,14 +80,17 @@
 }
 .caja8
 {
+     background-color: #afafaf;
     transition: transform 1s;
 }
 .caja8:hover
 {
+    
    transform: translateY(210px);
 }
 .caja9
 {
+     background-color: #4c53a5;
     transition: transform 1s;
 }
 .caja9:hover
@@ -89,6 +99,7 @@
 }
 .caja10
 {
+    background-color: gray;
     transition: transform 1s;
 }
 .caja10:hover
@@ -97,7 +108,8 @@
 }
 .caja11
 {
- transition: transform 1s;   
+    background-color: black;
+    transition: transform 1s;   
 }
 .caja11:hover
 {
