--- a/DIWEB/CSS/Ejercicio Página web/estilos/estilos.css
+++ b/DIWEB/CSS/Ejercicio Página web/estilos/estilos.css
@@ -1,240 +1,26 @@
-
-*
+body
 {
-    font-family: 'Roboto', sans-serif;
+    background-color: #6394b2;
 }
 nav
 {
-    display: grid ;
-    grid-template-columns: 15% 85%;
-    max-height: 300px;
-    background-color: gray;
-}
-nav>ul
-{
-    
-    display:grid;
-    grid-template-columns: auto auto auto auto auto ;
-}
-#listaNav
-{
-    list-style: none;
-    margin-top: 40px;
-    
-}
-#listaNav>li>a
-{
-    text-decoration: none;
-    color: white;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    border: 1px solid;
+    min-height: 200px;
 }
 nav>img
 {
-    width: 80%;
-}
-li>button
-{
-    border-radius: 20px;
-    min-height: 30px;
-    width: 50%;
-    margin-top: -20px;
-}
-#busqueda
-{
-    margin-top: 30px;
-}
-#busqueda>input
-{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-body
-{
-    background-color: #0045ff;
-}
-#busqueda
-{
-    
-    width: 10%;
-    margin-bottom: 10px;
-}   
-#busqueda>input
-{
-    width: 80%;
-    margin-left: 15px;
+    width:50%;
     
 }
-#busqueda>button
+nav>ul
 {
-    width: 100%;
-    height: 3em;
-    background-color: #00ceff;
-    border: none;
-    border-radius: 20px;
-    
-}
-#CategoriasJuegos
-{
-    padding-top: 10px;
-    text-align: center;
-    background-color: white;
-    width: 10%;
-    padding-bottom: 10px;
-    float: left;
-}
-
-#CategoriasJuegos>ul{
-    
-    text-align: left;
-    list-style: decimal;
-    
-}
-#CategoriasJuegos>ul>li>a{
-    
-    text-decoration: none;
-    color: black;
-    
-}
-
-main
-{
-    margin-left: 400px;
-    margin-top: -50px;
-    width: 50%;
-}
-#Banner
-{
-    
-    border: 1px solid;
-    
-    min-height: 100px;
-    background-image: url(../Source/bannerSSBB.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 98%;
-}
-#Banner>h1 {
-    color: white;
-    font-weight: bold;
-   
-    position: relative;
-    background-color: black;
-    top: 44px;
-    width: 4em;
-    left: 20px;
-}
-#contiene6>ul
-{
-    display:grid;
-    grid-template-columns: 33.3% 33.3% 33.3%;
-    grid-row-gap: 20px;
-}
-#contiene6>ul>li
-{
-    /*border:1px solid;*/
     list-style: none;
-    
-    width: 100%;
-}
-#contiene6
-{
-    margin-left: -40px;
-}
-#contiene6>ul>li>img {
-    border: 1px solid;
-    list-style: none;
-    /* min-height: 250px; */
-    /* max-width: 250px; */
-    width: 95%;
-}
-#contiene6>ul>li
-{
-    color: white;
-}
-#juegosComprados
-{
+    display: inline-flex;
     
 }
-#contiene6 > ul > li {
-   
-    list-style: none;
-}
-#contiene6>ul>li>h1
-{
-    text-align: center;
-}
-main+section
+ul>li>a
 {
     
-  float: right;
-  width: 200px;
-  margin-right: 10%;
-  margin-top: -689px;
-    
-}
-#juegosComprados,#juegosSugeridos
-{
-    background-color: white
-}
-#juegosComprados>ul,#juegosSugeridos>ul
-{
-   text-align: left;
-    padding-bottom: 20px;
-}
-#juegosComprados>ul>li>a,#juegosSugeridos>ul>li>a
-{
-    text-decoration: none;
-    color: #000000;
-}
-#juegosComprados>ul>li>a
-{
-    text-decoration: none;
-    color: #000000;
-}
-footer {
-    position: fixed;
-    bottom: -10px;
-    left: 21%;
-    background-color: white;
-    
-    width: 50%;
-}
-footer>ul
-{
-    display: grid;
-    grid-template-columns: auto auto auto ;
-}
-li>i
-{
-    color: #ff6c00;
-}
-#contiene6+div
-{
-    
-    margin-left: 800px;
-    background-color: white
-}
-main+section {
-    float: right;
-    width: 200px;
-    margin-right: 10%;
-    margin-top: -717px;
-}
-#redesSociales
-{
-    background-color: white;
-        padding-bottom: 10px;
-    margin-top: 20em;
-}
-#redesSociales>h4
-{
-    
-    text-align:center;
-}
-#redesSociales>i
-{
-    color: #00e2ff;
-}
-.fa-facebook-square
-{
-    color: #0031ff !important;
 }
