--- a/DIWEB/CSS/examen parte 2/css/estilos.css
+++ b/DIWEB/CSS/examen parte 2/css/estilos.css
@@ -85,7 +85,7 @@ nav {
     background-size: cover;
     text-align: center;
     height: 600px;
-    
+    display: flex;
 }
 #seccionPrimera>h1
 {
@@ -93,6 +93,9 @@ nav {
     padding-top: 200px;
     color: yellow;
      text-shadow: 20px 20px 20px #000000;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
 }
 #acercade
 {
@@ -142,7 +145,8 @@ nav {
     padding-top:80px ;
     color: white;
     font-size: 20px;
-    
+    width: 100%;
+    text-align: center;
 }
 #servicios
 {
