--- a/animaciones/Actividad animaciones/src/style/stylesheet.css
+++ b/animaciones/Actividad animaciones/src/style/stylesheet.css
@@ -14,18 +14,40 @@
 }
 @keyframes entrar {
     from { 
-        margin-left: 114%;
+        left: 114%;
         opacity: 0; 
     }
     to   {
-        margin-left: 114%;
-        opacity: 0;
+        left: 0%;
+        opacity: 1;
      }
+    50%
+    {
+      left: 114%;
+        opacity: 0; 
+    }
 }
 
-body {
+
+@keyframes escalar {
+    from { 
+        font-size: 50px;
+         top: 125px;
+    }
+    50%   {
+       font-size: 15px;
+       top: 225px;
+     }
+     to   {
+       font-size: 50px;
+       top: 125px;
+     }
+    
+}
+
+h1 {
     -moz-animation-name: roll;
-    -moz-animation-duration: 0.5s;
+    -moz-animation-duration: 1s;
     -moz-animation-iteration-count: 1;
     -webkit-animation-name: roll;
     -webkit-animation-duration: 1s;
@@ -40,6 +62,22 @@ html,body,div {
 }
 #ejemplo
 {
-    
-    -moz-animation-name: entrar;
+   position: absolute;
+   -moz-animation-name: entrar;
+    -moz-animation-duration: 2s;
+    -moz-animation-iteration-count: 1;
+    -webkit-animation-name: entrar;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: 1;
+}
+#sinForma
+{
+    position: absolute;
+   -moz-animation-name: escalar;
+    -moz-animation-duration: 2s;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-name: escalar;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    top: 125px;
 }
